Tweaked margin and spacing issues as last minute fixes, but overall, this site is complete! will update with correct info as time passes to display my actual portfolio

--- a/Aessets/css/style.css
+++ b/Aessets/css/style.css
@@ -578,8 +578,10 @@ background-color: var(--first-color);
 /*==================== QUALIFICATION ====================*/
 .qualification__tabs{
     display: flex;
-    justify-content: space-evenly;
     margin-bottom: var(--mb-2);
+    justify-content: space-evenly;
+    position: relative;
+    margin-right: 20%;
 }
 
 .qualification__button{
@@ -600,7 +602,7 @@ background-color: var(--first-color);
 .qualification__data{
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
-    column-gap: 1.5rem;
+    column-gap: 1.0rem;
 }
 
 .qualification__title{
@@ -611,7 +613,8 @@ background-color: var(--first-color);
 .qualification__subtitle{
     display: inline-block;
     font-size: var(--small-font-size);
-    margin-bottom: var(--mb-1);
+    margin-bottom: .5rem;
+    position: relative;
 }
 
 .qualification__calendar{
@@ -647,6 +650,9 @@ background-color: var(--first-color);
     color: var(--first-color);
 }
 
+.qual-title2{
+    
+}
 
 /*==================== SERVICES ====================*/
 .services__container{
@@ -785,6 +791,7 @@ transform: translateX(.25rem);
     align-self: center;
     margin-left: 30%;
     margin-right: 30%;
+    margin-bottom: 1rem;
 }
 
 
@@ -810,6 +817,13 @@ transform: translateX(.25rem);
 .project__title,
 .project__description{
     color: #fff;
+}
+
+.project__img{
+    width:300px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: .5rem;
 }
 
 
@@ -857,11 +871,15 @@ transform: translateX(.25rem);
 /*==================== CONTACT ME ====================*/
 .contact__container{
     row-gap: 3rem;
+    align-items: center;
 }
 
 .contact__information{
     display: flex;
     margin-bottom: var(--mb-2);
+    margin-right: auto;
+    width: 100%;
+
 }
 
 .contact__icon{
@@ -900,7 +918,6 @@ transform: translateX(.25rem);
     border: none;
     outline: none;
     padding: .25rem .5rem .5rem 0;
-
 }
 /*==================== FOOTER ====================*/
 .footer{
